force-app/main/default/objects/Payout_Bank_Account__c/Payout_Bank_Account__c.object-meta.xml
<CustomObject>
    <label>Payout Bank Account</label>
    <nameField>
        <label>Payout Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payout Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>