force-app/main/default/objects/Payout_Bank_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Franchisee Account</value>
        </filterItems>
        <infoMessage>Select Franchisee Account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payout Bank Accounts</relationshipLabel>
    <relationshipName>Payout_Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>