force-app/main/default/objects/Payout_Bank_Account__c/fields/Account_Holder_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Type__c</fullName>
    <label>Account Holder Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>individual</fullName>
            </value>
            <value>
                <fullName>company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>