force-app/main/default/objects/Payout_Bank_Account__c/fields/Bank_Currency__c.field-meta.xml
<CustomField>
    <fullName>Bank_Currency__c</fullName>
    <label>Bank Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>aud</fullName>
            </value>
            <value>
                <fullName>usd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>