force-app/main/default/objects/Payout_Bank_Account__c/fields/BSB_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>BSB_Routing_Number__c</fullName>
    <label>BSB/Routing Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>