force-app/main/default/objects/Payout_Bank_Account__c/fields/Default_Bank__c.field-meta.xml
<CustomField>
    <fullName>Default_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Bank</label>
    <type>Checkbox</type>
</CustomField>