force-app/main/default/objects/Payout_Bank_Account__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>new</fullName>
                <default>true</default>
                <label>new</label>
            </value>
            <value>
                <fullName>validated</fullName>
            </value>
            <value>
                <fullName>verified</fullName>
            </value>
            <value>
                <fullName>verification_failed</fullName>
            </value>
            <value>
                <fullName>errored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>